--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
   <!-- Galería de fotos -->
   <div class="galeria">
-    <img src="foto1.jpg" alt="Recuerdo 1">
-    <img src="foto2.jpg" alt="Recuerdo 2">
-    <img src="foto3.jpg" alt="Recuerdo 3">
+    <img src="foto1.jpg.jpg" alt="Recuerdo 1">
+    <img src="foto2.jpg.jpeg" alt="Recuerdo 2">
+    <img src="foto3.jpg.jpeg" alt="Recuerdo 3">
   </div>
 
   <!-- Música de fondo -->
@@ -130,3 +130,4 @@
 
 </body>
 </html>
+
