--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <h1>Feliz día mi amor ❤️</h1>
   <p>Te amo con toda mi alma.<br>
   Tú y Dulce María son el motor de mi vida.<br>
-  Gracias por estar a mi lado 💕</p>
+  Gracias por estar a mi lado, feliz dia de amor y amistad, LAS AMO con mi alma 💕</p>
 
   <div class="corazon">💖</div>
 
@@ -130,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
