--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
     }
 
     .galeria img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      position: absolute;
-      opacity: 0;
-      animation: fade 15s infinite;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;   /* en vez de cover, muestra la imagen completa */
+  background: #000;      /* agrega un fondo para cuando la foto no llena el cuadro */
+  position: absolute;
+  opacity: 0;
+  animation: fade 15s infinite;
+}
+
     }
 
     .galeria img:nth-child(1) { animation-delay: 0s; }
@@ -130,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
