--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
   <!-- Galería de fotos -->
   <div class="galeria">
-    <img src="foto1.jpg" alt="Recuerdo 1">
-    <img src="foto2.jpeg" alt="Recuerdo 2">
-    <img src="foto3.jpeg" alt="Recuerdo 3">
+    <img src="f1.jpg" alt="Recuerdo 1">
+    <img src="f2.jpeg" alt="Recuerdo 2">
+    <img src="f3.jpeg" alt="Recuerdo 3">
   </div>
 
   <!-- Música de fondo -->
@@ -133,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
