--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
 
     .galeria img {
   width: 100%;
-  height: 100%;
-  object-fit: contain;   /* en vez de cover, muestra la imagen completa */
-  background: #000;      /* agrega un fondo para cuando la foto no llena el cuadro */
+  height: 300px;
+  object-fit: cover;
   position: absolute;
   opacity: 0;
   animation: fade 15s infinite;
+}
+
 }
 
     }
@@ -133,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
