--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     /* Galería */
     .galeria {
       position: relative;
-      width: 90%;
+      width: 80%;
       max-width: 800px;
       height: 500px;
       overflow: hidden;
@@ -117,11 +117,11 @@
     <img src="f3.jpeg" alt="Recuerdo 3">
   </div>
 
-  <!-- Música de fondo -->
-  <audio autoplay loop>
-    <source src="EL AGUACATE.mp3" type="audio/mpeg">
-    Tu navegador no soporta audio.
-  </audio>
+ <audio autoplay loop controls>
+  <source src="EL AGUACATE.mp3" type="audio/mpeg">
+  Tu navegador no soporta audio.
+</audio>
+
 
   <!-- Corazones flotando -->
   <div class="heart" style="left:10%;">💘</div>
@@ -134,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
